# Valeria

./: .gitignore  Procfile  README.md  elixir_buildpack.config  mix.exs
config/: config.exs  prod.exs
lib/mix/: valeria.ex
lib/valeria/: application.ex  command.ex  consumer.ex  event.ex  native.ex  repo.ex
lib/valeria/commands/core/: help.ex
lib/valeria/commands/reddit/: karma.ex
lib/valeria/events/reddit/: downvote_add.ex  downvote_remove.ex  upvote_add.ex  upvote_remove.ex
lib/valeria/events/starboard/: star_add.ex  star_remove.ex
lib/valeria/reddit/: reddit.ex  user.ex
native/valeria/: Cargo.toml  README.md
native/valeria/src/: lib.rs
priv/repo/migrations/: 20201217203639_create_reddit_user.exs
valeria/src/: lib.rs
