[package]
name = "valeria_nifnative"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "valeria_nifnative"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = { git = "https://github.com/rusterlium/rustler", rev = "e343b8ca"}
rusttype = "0.9.2"
imageproc ="0.22.0"
image ={version = "0.23.12"}
reqwest ={version= "0.10.10", features = ["blocking"]}